Avoid new default boldish font on ios

--- a/freesound/static/bw-frontend/styles/layout/global.scss
+++ b/freesound/static/bw-frontend/styles/layout/global.scss
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+  font-family: BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: $base-size-mobile;
   line-height: $base-line-height-mobile;
@@ -21,7 +21,7 @@ body {
   background-color: $white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight: 400; /* designer sugegsted overall font weight 500, but we're making it 400 as otherwise it felt too heavy */
+  font-weight: 400; /* designer suggested overall font weight 500, but we're making it 400 as otherwise it felt too heavy */
   
   /* disallow avoid horizontal scrolling */
   max-width: 100%;
